Fixed some positioning issues

--- a/Styles/dayDesign.css
+++ b/Styles/dayDesign.css
@@ -101,13 +101,13 @@ h2 {
   margin: 20px;
 }
 
-.infoCard,
-.projectCard {
+.infoCard {
   background-color: #fff9d2;
   border-radius: 10px;
   box-shadow: 2px 2px 3px #111111;
   padding: 20px;
-  margin: 20px;
+  margin: auto;
+  min-width: 200px;
   width: 100%;
 }
 
@@ -377,6 +377,16 @@ footer {
   scroll-padding: 24px;
   border-radius: 20px;
   gap: 12px;
+}
+
+.projectCard {
+  background-color: #fff9d2;
+  border-radius: 10px;
+  box-shadow: 2px 2px 3px #111111;
+  padding: 20px;
+  margin: auto;
+  min-width: 500px;
+  width: 100%;
 }
 
 .projectButton,
