--- a/Styles/dayDesign.css
+++ b/Styles/dayDesign.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 *:focus,
@@ -17,6 +18,7 @@ body {
   margin: 0 auto;
   position: relative;
 }
+
 .blur {
   filter: blur(10px);
 }
@@ -102,16 +104,30 @@ h2 {
   border-radius: 200px;
   box-shadow: 2px 2px 3px #111111;
   margin: 20px;
+  transition: 0.2s ease-in;
+}
+
+.mainPictures:hover {
+  box-shadow: 0px 10px 15px #252525;
+  transform: translateY(-5px);
+  transition: 0.2s ease-in;
 }
 
 .infoCard {
   background-color: #fff9d2;
   border-radius: 10px;
-  box-shadow: 2px 2px 3px #111111;
+  box-shadow: 2px 2px 3px #252525;
   padding: 20px;
   margin: auto;
   min-width: 200px;
   width: 100%;
+  transition: 0.2s ease-in;
+}
+
+.infoCard:hover {
+  box-shadow: 0px 10px 15px #252525;
+  transform: translateY(-5px);
+  transition: 0.2s ease-in;
 }
 
 #contact,
@@ -427,6 +443,7 @@ footer {
   width: 100%;
   height: 200px;
   box-shadow: 2px 2px 3px #111111;
+  transition: 0.3s ease-in;
 }
 
 .slideshow-container {
@@ -474,6 +491,7 @@ footer {
   font-size: 12px;
   position: absolute;
   top: 0;
+  border-radius: 50px;
 }
 
 /* The dots/indicators */
@@ -510,12 +528,12 @@ footer {
 
 /* Fading animation */
 .fade {
-  animation: fade 1s ease 0s 1 normal forwards;
+  animation: fade 2s ease 0s 1 normal forwards;
 }
 
 @keyframes fade {
-  from {
-    opacity: 1;
+  0% {
+    opacity: 0;
   }
 
   to {
