--- a/Styles/dayDesign.css
+++ b/Styles/dayDesign.css
@@ -36,6 +36,7 @@ body {
 
 button {
   transition: 0.3s ease;
+  margin: auto;
 }
 
 button:hover {
@@ -83,6 +84,7 @@ button:active {
 
   width: 65px;
   height: 65px;
+  margin: auto;
 
   border: none;
   border-radius: 20px;
@@ -141,9 +143,13 @@ h2 {
   transition: 0.2s ease-in;
 }
 
-.resumeCard:hover {
-  font-weight: bold;
+.resumeCard h6 {
+  margin-top: 5px;
   transition: 0.15s ease;
+}
+
+.resumeCard:hover h6 {
+  color: #ff8473;
 }
 
 #resumeButton {
