--- a/Styles/dayDesign.css
+++ b/Styles/dayDesign.css
@@ -158,6 +158,7 @@ p {
   font-size: medium;
   text-align: justify;
   text-indent: 2em;
+  margin: 10px auto;
 }
 
 .skillHeading {
@@ -598,6 +599,27 @@ textarea {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+/* FOOTER */
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px auto;
+  background-color: #fff9d2;
+  width: fit-content;
+  padding: 0 10px;
+  border-radius: 20px;
+  box-shadow: 2px 2px 3px #252525;
+  transition: 0.2s ease-in;
+}
+
+footer:hover {
+  box-shadow: 0px 10px 15px #252525;
+  transform: translateY(-4px);
+  transition: 0.2s ease-in;
 }
 
 /* ANIMATIONS */
