--- a/Styles/dayDesign.css
+++ b/Styles/dayDesign.css
@@ -605,6 +605,7 @@ textarea {
 
 footer {
   display: flex;
+  text-align: center;
   justify-content: center;
   align-items: center;
   margin: 10px auto;
