Hide scrollbars in mobile devices

--- a/Styles/dayDesign.css
+++ b/Styles/dayDesign.css
@@ -194,6 +194,13 @@ li {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
+@media screen and (max-width: 991px) {
+  ::-webkit-scrollbar {
+    -webkit-appearance: none;
+    display: none;
+  }
+}
+
 /* TECH STACK SECTION */
 .techStackCard {
   background-color: #fff9d2;
