Changed color of progLangTitles

--- a/Styles/dayDesign.css
+++ b/Styles/dayDesign.css
@@ -252,6 +252,7 @@ li {
   padding-bottom: 2px;
   font-size: 10px;
   font-style: oblique;
+  color: #252525;
   font-weight: bold;
   transition: 0.1s ease;
 }
