--- a/Styles/dayDesign.css
+++ b/Styles/dayDesign.css
@@ -22,6 +22,8 @@ body {
 
 .blur {
   filter: blur(10px);
+  transition: 0.2s ease;
+  z-index: 3;
 }
 
 .navBar {
@@ -205,18 +207,13 @@ li {
 .techStackCard {
   background-color: #fff9d2;
   box-shadow: 2px 2px 3px #252525;
-  margin: auto;
+  margin: 10px auto;
   padding: 20px;
   width: 100%;
   min-width: 275px;
   border-radius: 20px;
   transition: 0.2s ease-in;
-}
-
-.techStackCard:hover {
-  box-shadow: 0px 10px 15px #252525;
-  transform: translateY(-4px);
-  transition: 0.2s ease-in;
+  z-index: 3;
 }
 
 .progLangCube {
@@ -287,18 +284,19 @@ li {
 #JupyterInfo,
 #FlutterInfo,
 #DjangoInfo {
+  display: block;
   position: absolute;
   width: 25%;
   min-width: 200px;
   max-width: 450px;
   max-height: 450px;
-  padding: 25px;
-  margin: auto;
+  padding: 20px;
+  margin: 10px auto;
   background-color: #fff9d2;
   box-shadow: 2px 2px 3px #252525;
   border-radius: 50px;
-  transition: 0.3s ease;
-  z-index: 3;
+  transition: 0.2s ease-in;
+  z-index: 5;
 }
 
 #JSInfo,
@@ -306,7 +304,7 @@ li {
 #VSInfo,
 #MATLABInfo,
 #FlutterInfo {
-  right: 30%;
+  right: 10%;
 }
 
 #HTMLInfo:hover,
@@ -327,6 +325,8 @@ li {
 #FlutterInfo:hover,
 #DjangoInfo:hover {
   transform: translateY(-4px);
+  box-shadow: 0px 10px 15px #252525;
+  transition: 0.2s ease-in;
 }
 
 .definitions {
@@ -566,6 +566,12 @@ li {
   box-shadow: 2px 2px 3px #252525;
 }
 
+#firstName:hover,
+#lastName:hover,
+#email:hover {
+  box-shadow: 0px 10px 15px #252525;
+}
+
 textarea {
   margin: 10px auto;
   padding: 10px;
@@ -616,6 +622,12 @@ textarea {
   color: #ff8473;
 }
 
+.resumeCard:active {
+  transform: translateY(-2px);
+  transition: 0.2s ease-in;
+  box-shadow: 0px 10px 15px #ff8473;
+}
+
 #resumeButton {
   margin: auto;
   width: 100%;
@@ -629,7 +641,6 @@ textarea {
 }
 
 /* FOOTER */
-
 footer {
   display: flex;
   text-align: center;
