--- a/Styles/dayDesign.css
+++ b/Styles/dayDesign.css
@@ -12,7 +12,8 @@
 }
 
 body {
-  background-image: linear-gradient(to bottom left, #ff8473, #fff9d2);
+  background-image: linear-gradient(to bottom left, #018dc4, #50c4ed, #bcfefe);
+
   width: auto;
   min-height: 100vh;
   text-size-adjust: auto;
@@ -37,9 +38,8 @@ button {
 }
 
 button:hover {
-  background-color: #ff8473;
-  box-shadow: 0px 10px 15px #ff8473;
-  color: #fff9d2;
+  background-color: #ffdb7a;
+  box-shadow: 0px 10px 15px #ffdb7a;
   transform: translateY(-4px);
 }
 
@@ -73,14 +73,14 @@ button:active {
   font-size: small;
   color: #252525;
   transition: 0.3s ease;
-  background-color: #fff9d2;
+  background-color: #ffdb7a;
   border-radius: 20px;
   box-shadow: 2px 2px 3px #252525;
   padding: 2px;
 }
 
 .menuButtons {
-  background-color: #fff9d2;
+  background-color: #ffdb7a;
   box-shadow: 2px 2px 3px #252525;
 
   width: 65px;
@@ -96,15 +96,15 @@ button:active {
   margin: 20px auto;
   display: flex;
   justify-content: center;
-  color: #252525;
-  text-shadow: 2px 2px 3px #fff9d2;
+  color: #ffdb7a;
+  text-shadow: 2px 2px 3px #252525;
   transition: 1s ease-in;
 }
 
 /* ABOUT ME SECTION*/
 .greeting {
-  color: #252525;
-  text-shadow: 2px 2px 3px #fff9d2;
+  color: #ffdb7a;
+  text-shadow: 2px 2px 3px #252525;
   transition: 1s ease-in;
   margin: 0 auto;
   padding: 5px;
@@ -151,7 +151,7 @@ footer:hover {
 }
 
 .infoCard {
-  background-color: #fff9d2;
+  background-color: #ffdb7a;
   border-radius: 20px;
   box-shadow: 2px 2px 3px #252525;
   padding: 20px;
@@ -162,8 +162,8 @@ footer:hover {
 }
 
 .cardTitles {
-  color: #ff8473;
-  text-shadow: 2px 2px 5px #ff8473;
+  color: #252525;
+  text-shadow: 2px 2px 5px #252525;
   font-style: oblique;
 }
 
@@ -172,14 +172,16 @@ p {
   text-align: justify;
   text-indent: 2em;
   margin: 10px auto;
+  color: #252525;
 }
 
 .skillHeading {
-  color: #ff8473;
+  color: #252525;
 }
 
 li {
   text-align: left;
+  color: #252525;
 }
 
 #message::-webkit-scrollbar,
@@ -190,7 +192,7 @@ li {
 
 #message::-webkit-scrollbar-track,
 .container::-webkit-scrollbar-track {
-  background: #ff8473;
+  background: #ffdb7a;
   border: 2px solid #252525;
   border-radius: 30px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
@@ -200,7 +202,7 @@ li {
 
 #message::-webkit-scrollbar-thumb,
 .container::-webkit-scrollbar-thumb {
-  background-color: #fff9d2;
+  background-image: linear-gradient(to bottom left, #018dc4, #50c4ed, #bcfefe);
   border-radius: 30px;
   width: 90%;
   border: 2px solid #252525;
@@ -219,7 +221,7 @@ li {
 
 /* TECH STACK SECTION */
 .techStackCard {
-  background-color: #fff9d2;
+  background-color: #ffdb7a;
   box-shadow: 2px 2px 3px #252525;
   margin: 10px auto;
   padding: 20px;
@@ -231,7 +233,7 @@ li {
 }
 
 .progLangCube {
-  background-color: #ff8473;
+  background-color: #252525;
   width: 100px;
   height: 100px;
   box-shadow: 2px 2px 3px #252525;
@@ -248,9 +250,8 @@ h4.projectTitle {
 
 .progLangCube:hover,
 .projectTitle:hover {
-  background-color: #ff8473;
-  box-shadow: 0px 10px 15px #ff8473;
-  color: #fff9d2;
+  background-color: #252525;
+  box-shadow: 0px 10px 15px #252525;
   transform: translateY(-4px);
 }
 
@@ -266,7 +267,7 @@ h4.projectTitle {
   padding-bottom: 2px;
   font-size: 10px;
   font-style: oblique;
-  color: #252525;
+  color: #ffdb7a;
   font-weight: bold;
   transition: 0.1s ease;
 }
@@ -309,7 +310,7 @@ h4.projectTitle {
   max-height: 450px;
   padding: 20px;
   margin: 10px auto;
-  background-color: #fff9d2;
+  background-image: linear-gradient(to bottom left, #018dc4, #50c4ed, #bcfefe);
   box-shadow: 2px 2px 3px #252525;
   border-radius: 50px;
   transition: 0.2s ease-in;
@@ -334,7 +335,7 @@ h4.projectTitle {
 }
 
 .defSource {
-  color: #ff8473;
+  color: #ffdb7a;
   position: relative;
   float: right;
 }
@@ -352,7 +353,7 @@ h4.projectTitle {
 }
 
 .projectCard {
-  background-color: #fff9d2;
+  background-color: #ffdb7a;
   box-shadow: 2px 2px 3px #252525;
   margin: 20px auto;
   width: 100%;
@@ -374,10 +375,18 @@ h4.projectTitle {
   padding: 3px;
   border: none;
   background-color: #252525;
+  transition: 0.2s ease-in;
+}
+
+.projectButton:hover,
+.sourceCodeButton:hover {
+  background-image: linear-gradient(to bottom left, #018dc4, #50c4ed, #bcfefe);
+  box-shadow: 0px 10px 15px #ffdb7a;
+  transform: translateY(-4px);
 }
 
 .projectTitle {
-  color: #fff9d2;
+  color: #ffdb7a;
   background-color: #252525;
   border-radius: 200px;
   box-shadow: 2px 2px 3px #252525;
@@ -415,7 +424,7 @@ h4.projectTitle {
   width: auto;
   margin-top: -150px;
   padding: 10px;
-  color: #fff9d2;
+  color: #ffdb7a;
   transition: 0.3s ease;
   border-radius: 20px;
   user-select: none;
@@ -433,15 +442,15 @@ h4.projectTitle {
 
 .prev:hover,
 .next:hover {
-  background-color: #ff8473;
-  box-shadow: 1px 2.5px 5px #ff8473;
+  background-color: #252525;
+  box-shadow: 1px 2.5px 5px #252525;
   color: #ffffff;
   transform: translateY(-2px);
 }
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #fff9d2;
+  color: #ffdb7a;
   padding: 15px;
   font-size: 12px;
   position: absolute;
@@ -456,7 +465,7 @@ h4.projectTitle {
   cursor: pointer;
   height: 10px;
   width: 10px;
-  background-color: #fff9d2;
+  background-color: #ffdb7a;
   box-shadow: 2px 2px 3px #252525;
   border-radius: 50%;
   display: inline-block;
@@ -475,15 +484,16 @@ h4.projectTitle {
 .dot1:hover,
 .dot2:hover,
 .dot3:hover {
-  background-color: #ff8473;
-  box-shadow: 0px 2.5px 5px #ff8473;
+  background-image: linear-gradient(to bottom left, #018dc4, #50c4ed, #bcfefe);
+  box-shadow: 0px 2.5px 5px #018dc4;
   transform: translateY(-2px);
   transition: ease 0.5s;
 }
 
 /* CONTACT INFORMATION SECTION */
 .socialMediaButton {
-  background-color: #ff8473;
+  background-image: linear-gradient(to bottom left, #018dc4, #50c4ed, #bcfefe);
+
   box-shadow: 2px 2px 3px #252525;
 
   width: 50px;
@@ -494,16 +504,20 @@ h4.projectTitle {
   border-radius: 20px;
 }
 
+.socialMediaButton:hover {
+  box-shadow: 0 10px 15px #50c4ed;
+}
+
 .socialMediaTitles {
   padding: 5px;
 }
 
 .formButtons {
-  background-color: #ff8473;
+  background-image: linear-gradient(to bottom left, #018dc4, #50c4ed, #bcfefe);
   border: none;
   border-radius: 20px;
   box-shadow: 2px 2px 3px #252525;
-  color: #fff9d2;
+  color: #252525;
   padding: 10px;
   margin: auto;
   resize: none;
@@ -512,7 +526,7 @@ h4.projectTitle {
 }
 
 .formButtons:focus {
-  box-shadow: 0px 10px 15px #ff8473;
+  box-shadow: 0px 10px 15px #50c4ed;
   transform: translateY(-4px);
   transition: 0.2s ease-in;
 }
@@ -526,7 +540,7 @@ h4.projectTitle {
 ::placeholder {
   padding: 5px;
   margin: auto;
-  color: #fff9d2;
+  color: #252525;
   font-size: 13px;
 }
 
@@ -557,6 +571,12 @@ h4.projectTitle {
   box-shadow: 0px 10px 15px #252525;
 }
 
+#firstName:focus,
+#lastName:focus,
+#email:focus {
+  box-shadow: 0px 10px 15px #50c4ed;
+}
+
 textarea {
   margin: 10px auto;
   padding: 10px;
@@ -580,22 +600,21 @@ textarea {
 #submitButton:active {
   transform: translateY(-2px);
   transition: 0.2s ease-in;
-  box-shadow: 0px 10px 15px #ff8473;
+  box-shadow: 0px 10px 15px #50c4ed;
 }
 
 .pageclip-form__submit::after {
-  border-color: rgba(255, 249, 210, 0.8);
-  border-left-color: #fff9d2;
+  border-color: rgba(188, 254, 254, 0.8);
+  border-left-color: #50c4ed;
 }
 
 .pageclip-form__success {
-  background: hsla(52, 100%, 91%, 0.8);
+  background: hsla(44, 100%, 74%, 0.8);
   border-radius: 20px;
-  color: #ff8473;
 }
 
 .resumeCard {
-  background-color: #fff9d2;
+  background-color: #ffdb7a;
   border-radius: 20px;
   box-shadow: 2px 2px 3px #252525;
   height: auto;
@@ -610,13 +629,13 @@ textarea {
 }
 
 .resumeCard:hover h6 {
-  color: #ff8473;
+  color: #018dc4;
 }
 
 .resumeCard:active {
   transform: translateY(-2px);
   transition: 0.2s ease-in;
-  box-shadow: 0px 10px 15px #ff8473;
+  box-shadow: 0px 10px 15px #252525;
 }
 
 #resumeButton {
@@ -638,7 +657,7 @@ footer {
   justify-content: center;
   align-items: center;
   margin: 20px auto;
-  background-color: #fff9d2;
+  background-color: #ffdb7a;
   width: fit-content;
   max-width: 90%;
   padding: 5px 20px;
