Minor adjustments to light mode color

--- a/Styles/dayDesign.css
+++ b/Styles/dayDesign.css
@@ -442,7 +442,7 @@ h4.projectTitle {
 
 .prev:hover,
 .next:hover {
-  background-color: #252525;
+  background-color: #50c4ed;
   box-shadow: 1px 2.5px 5px #252525;
   color: #ffffff;
   transform: translateY(-2px);
