--- a/Styles/dayDesign.css
+++ b/Styles/dayDesign.css
@@ -12,7 +12,7 @@
 }
 
 body {
-  background-image: linear-gradient(to bottom left, #018dc4, #50c4ed, #bcfefe);
+  background-image: linear-gradient(to top left, #a82654, #fd8c69);
 
   width: auto;
   min-height: 100vh;
@@ -38,8 +38,8 @@ button {
 }
 
 button:hover {
-  background-color: #ffdb7a;
-  box-shadow: 0px 10px 15px #ffdb7a;
+  background-color: #fbf1e4;
+  box-shadow: 0px 10px 15px #fbf1e4;
   transform: translateY(-4px);
 }
 
@@ -71,16 +71,15 @@ button:active {
   margin-top: 5px;
   text-align: center;
   font-size: small;
-  color: #252525;
   transition: 0.3s ease;
-  background-color: #ffdb7a;
+  background-color: #fbf1e4;
   border-radius: 20px;
   box-shadow: 2px 2px 3px #252525;
   padding: 2px;
 }
 
 .menuButtons {
-  background-color: #ffdb7a;
+  background-color: #fbf1e4;
   box-shadow: 2px 2px 3px #252525;
 
   width: 65px;
@@ -96,14 +95,14 @@ button:active {
   margin: 20px auto;
   display: flex;
   justify-content: center;
-  color: #ffdb7a;
+  color: #fbf1e4;
   text-shadow: 2px 2px 3px #252525;
   transition: 1s ease-in;
 }
 
 /* ABOUT ME SECTION*/
 .greeting {
-  color: #ffdb7a;
+  color: #fbf1e4;
   text-shadow: 2px 2px 3px #252525;
   transition: 1s ease-in;
   margin: 0 auto;
@@ -151,7 +150,7 @@ footer:hover {
 }
 
 .infoCard {
-  background-color: #ffdb7a;
+  background-color: #fbf1e4;
   border-radius: 20px;
   box-shadow: 2px 2px 3px #252525;
   padding: 20px;
@@ -162,8 +161,8 @@ footer:hover {
 }
 
 .cardTitles {
-  color: #252525;
-  text-shadow: 2px 2px 5px #252525;
+  color: #fd8c69;
+  text-shadow: 2px 2px 3px #a82654;
   font-style: oblique;
 }
 
@@ -176,7 +175,7 @@ p {
 }
 
 .skillHeading {
-  color: #252525;
+  color: #fd8c69;
 }
 
 li {
@@ -192,7 +191,7 @@ li {
 
 #message::-webkit-scrollbar-track,
 .container::-webkit-scrollbar-track {
-  background: #ffdb7a;
+  background: #fbf1e4;
   border: 2px solid #252525;
   border-radius: 30px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
@@ -202,7 +201,7 @@ li {
 
 #message::-webkit-scrollbar-thumb,
 .container::-webkit-scrollbar-thumb {
-  background-image: linear-gradient(to bottom left, #018dc4, #50c4ed, #bcfefe);
+  background-image: linear-gradient(to top left, #a82654, #fd8c69);
   border-radius: 30px;
   width: 90%;
   border: 2px solid #252525;
@@ -221,7 +220,7 @@ li {
 
 /* TECH STACK SECTION */
 .techStackCard {
-  background-color: #ffdb7a;
+  background-color: #fbf1e4;
   box-shadow: 2px 2px 3px #252525;
   margin: 10px auto;
   padding: 20px;
@@ -233,10 +232,10 @@ li {
 }
 
 .progLangCube {
-  background-color: #252525;
+  background-image: linear-gradient(to top left, #a82654, #fd8c69);
   width: 100px;
   height: 100px;
-  box-shadow: 2px 2px 3px #252525;
+  box-shadow: 2px 2px 3px #a82654;
   padding: 10px;
   margin: auto;
   margin-top: 25px;
@@ -251,7 +250,7 @@ h4.projectTitle {
 .progLangCube:hover,
 .projectTitle:hover {
   background-color: #252525;
-  box-shadow: 0px 10px 15px #252525;
+  box-shadow: 0px 10px 15px #a82654;
   transform: translateY(-4px);
 }
 
@@ -267,7 +266,7 @@ h4.projectTitle {
   padding-bottom: 2px;
   font-size: 10px;
   font-style: oblique;
-  color: #ffdb7a;
+  color: #fbf1e4;
   font-weight: bold;
   transition: 0.1s ease;
 }
@@ -310,7 +309,7 @@ h4.projectTitle {
   max-height: 450px;
   padding: 20px;
   margin: 10px auto;
-  background-image: linear-gradient(to bottom left, #018dc4, #50c4ed, #bcfefe);
+  background-image: linear-gradient(to top left, #a82654, #fd8c69);
   box-shadow: 2px 2px 3px #252525;
   border-radius: 50px;
   transition: 0.2s ease-in;
@@ -335,7 +334,7 @@ h4.projectTitle {
 }
 
 .defSource {
-  color: #ffdb7a;
+  color: #fbf1e4;
   position: relative;
   float: right;
 }
@@ -353,7 +352,7 @@ h4.projectTitle {
 }
 
 .projectCard {
-  background-color: #ffdb7a;
+  background-color: #fbf1e4;
   box-shadow: 2px 2px 3px #252525;
   margin: 20px auto;
   width: 100%;
@@ -374,19 +373,18 @@ h4.projectTitle {
   box-shadow: 2px 2px 3px #252525;
   padding: 3px;
   border: none;
-  background-color: #252525;
+  background-image: linear-gradient(to top left, #a82654, #fd8c69);
   transition: 0.2s ease-in;
 }
 
 .projectButton:hover,
 .sourceCodeButton:hover {
-  background-image: linear-gradient(to bottom left, #018dc4, #50c4ed, #bcfefe);
-  box-shadow: 0px 10px 15px #ffdb7a;
+  box-shadow: 0px 10px 15px #a82654;
   transform: translateY(-4px);
 }
 
 .projectTitle {
-  color: #ffdb7a;
+  color: #fbf1e4;
   background-color: #252525;
   border-radius: 200px;
   box-shadow: 2px 2px 3px #252525;
@@ -424,7 +422,7 @@ h4.projectTitle {
   width: auto;
   margin-top: -150px;
   padding: 10px;
-  color: #ffdb7a;
+  color: #fbf1e4;
   transition: 0.3s ease;
   border-radius: 20px;
   user-select: none;
@@ -442,7 +440,7 @@ h4.projectTitle {
 
 .prev:hover,
 .next:hover {
-  background-color: #50c4ed;
+  background-color: #a82654;
   box-shadow: 1px 2.5px 5px #252525;
   color: #ffffff;
   transform: translateY(-2px);
@@ -450,7 +448,7 @@ h4.projectTitle {
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #ffdb7a;
+  color: #fbf1e4;
   padding: 15px;
   font-size: 12px;
   position: absolute;
@@ -465,7 +463,7 @@ h4.projectTitle {
   cursor: pointer;
   height: 10px;
   width: 10px;
-  background-color: #ffdb7a;
+  background-color: #fbf1e4;
   box-shadow: 2px 2px 3px #252525;
   border-radius: 50%;
   display: inline-block;
@@ -484,15 +482,15 @@ h4.projectTitle {
 .dot1:hover,
 .dot2:hover,
 .dot3:hover {
-  background-image: linear-gradient(to bottom left, #018dc4, #50c4ed, #bcfefe);
-  box-shadow: 0px 2.5px 5px #018dc4;
+  background-image: linear-gradient(to top left, #a82654, #fd8c69);
+  box-shadow: 0px 2px 5px #fd8c69;
   transform: translateY(-2px);
   transition: ease 0.5s;
 }
 
 /* CONTACT INFORMATION SECTION */
 .socialMediaButton {
-  background-image: linear-gradient(to bottom left, #018dc4, #50c4ed, #bcfefe);
+  background-image: linear-gradient(to top left, #a82654, #fd8c69);
 
   box-shadow: 2px 2px 3px #252525;
 
@@ -505,7 +503,7 @@ h4.projectTitle {
 }
 
 .socialMediaButton:hover {
-  box-shadow: 0 10px 15px #50c4ed;
+  box-shadow: 0 10px 15px #a82654;
 }
 
 .socialMediaTitles {
@@ -513,7 +511,7 @@ h4.projectTitle {
 }
 
 .formButtons {
-  background-image: linear-gradient(to bottom left, #018dc4, #50c4ed, #bcfefe);
+  background-image: linear-gradient(to top left, #a82654, #fd8c69);
   border: none;
   border-radius: 20px;
   box-shadow: 2px 2px 3px #252525;
@@ -526,7 +524,7 @@ h4.projectTitle {
 }
 
 .formButtons:focus {
-  box-shadow: 0px 10px 15px #50c4ed;
+  box-shadow: 0px 10px 15px #a82654;
   transform: translateY(-4px);
   transition: 0.2s ease-in;
 }
@@ -574,7 +572,7 @@ h4.projectTitle {
 #firstName:focus,
 #lastName:focus,
 #email:focus {
-  box-shadow: 0px 10px 15px #50c4ed;
+  box-shadow: 0px 10px 15px #a82654;
 }
 
 textarea {
@@ -600,12 +598,12 @@ textarea {
 #submitButton:active {
   transform: translateY(-2px);
   transition: 0.2s ease-in;
-  box-shadow: 0px 10px 15px #50c4ed;
+  box-shadow: 0px 10px 15px #a82654;
 }
 
 .pageclip-form__submit::after {
   border-color: rgba(188, 254, 254, 0.8);
-  border-left-color: #50c4ed;
+  border-left-color: #a82654;
 }
 
 .pageclip-form__success {
@@ -614,7 +612,7 @@ textarea {
 }
 
 .resumeCard {
-  background-color: #ffdb7a;
+  background-color: #fbf1e4;
   border-radius: 20px;
   box-shadow: 2px 2px 3px #252525;
   height: auto;
@@ -629,7 +627,7 @@ textarea {
 }
 
 .resumeCard:hover h6 {
-  color: #018dc4;
+  color: #a82654;
 }
 
 .resumeCard:active {
@@ -657,7 +655,7 @@ footer {
   justify-content: center;
   align-items: center;
   margin: 20px auto;
-  background-color: #ffdb7a;
+  background-color: #fbf1e4;
   width: fit-content;
   max-width: 90%;
   padding: 5px 20px;
