--- a/Styles/dayDesign.css
+++ b/Styles/dayDesign.css
@@ -162,6 +162,7 @@ footer:hover {
 
 .cardTitles {
   background: -webkit-linear-gradient(top, #fd8c69, #a82654);
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
