Fixed cardTitles position in displays under 991px

--- a/Styles/dayDesign.css
+++ b/Styles/dayDesign.css
@@ -229,6 +229,9 @@ li {
   #projectContainer.container {
     margin-bottom: -40px;
   }
+  .cardTitles {
+    margin-top: 0.75em;
+  }
 }
 
 /* TECH STACK SECTION */
