--- a/Styles/dayDesign.css
+++ b/Styles/dayDesign.css
@@ -221,7 +221,7 @@ li {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 855px) {
   ::-webkit-scrollbar {
     -webkit-appearance: none;
     display: none;
@@ -229,7 +229,7 @@ li {
   #projectContainer.container {
     margin-bottom: -40px;
   }
-  .cardTitles {
+  #softwareTitle {
     margin-top: 0.75em;
   }
 }
